# mentorship-achievements-data-analysis

./: README.md  analysis.ipynb  pyproject.toml
data/: mentorados_mentoria_dados_2024.csv
